[package]
name = "http2-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
flume = "0.10.14"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
quic-rpc = "0.1.8"
tokio = { version = "1.22.0", features = ["full"] }
